# Secure-Systems-Project

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
common/: __init__.py  config.py  timeout_middleware.py
db/: connection.py
routes/: auth.py  logged_in.py  root.py
templates/: error.html  index.html  logged.html  login.html  signed.html  signup.html
